--- a/app/src/main/res/layout/layout_main.xml
+++ b/app/src/main/res/layout/layout_main.xml
@@ -1,49 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:transitionGroup="true"
+    >
 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/face"
-    android:textSize="40dp"
+    android:textSize="60dp"
     android:textAlignment="center"
+    android:layout_marginTop="59dp"
     android:layout_centerHorizontal="true"
     ></TextView>
+
     <ImageView
         android:layout_width="500dp"
-        android:layout_height="300dp"
-        android:src="@drawable/ic_lightbulb_outline_black_24dp"
-        android:layout_marginTop="80dp"
-        ></ImageView>
+        android:layout_height="150dp"
+        android:layout_marginTop="150dp"
+        android:layout_marginLeft="50dp"
+        android:src="@drawable/ic_lightbulb_outline_black_24dp"></ImageView>
+
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="350dp"
-        android:background="@color/black"
+        android:layout_marginTop="25dp"
+        android:layout_marginLeft="200dp"
+        android:background="@color/red"
         android:text="@string/on"
-        android:textSize="40dp"
+        android:textSize="5dp"
         android:textAlignment="center"
         android:id="@+id/on"
+        android:clickable="true"
+        android:onClick="on"
 
         ></Button>
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="400dp"
-        android:background="@color/black"
+        android:layout_marginTop="25dp"
+        android:layout_alignBottom="@id/on"
+        android:layout_toRightOf="@id/on"
+        android:background="@color/translucent_orange"
         android:text="@string/off"
-        android:textSize="40dp"
+        android:textSize="4dp"
         android:textAlignment="center"
         android:id="@+id/off"></Button>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="300dp"
+        android:layout_marginLeft="100dp"
+        android:background="@color/black"
+        android:text="@string/On"
+        android:textSize="5dp"
+        android:textAlignment="center"
+        android:id="@+id/on1"
+
+        ></Button>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="300dp"
+        android:layout_alignBottom="@id/on1"
+        android:layout_toRightOf="@id/on1"
+        android:background="@color/black"
+        android:text="@string/Off"
+        android:textSize="5dp"
+        android:textAlignment="center"
+        android:id="@+id/off1"></Button>
+
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="450dp"
+        android:choiceMode="singleChoice" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="400dp"
+        android:text="Paired devices:"
+        android:id="@+id/textView2"
+        android:textColor="#ff34ff06"
+        android:textSize="25dp"
+        ></TextView>
 
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="450dp"
+        android:layout_marginTop="360dp"
         android:background="@color/black"
         android:text="@string/sett"
         android:textSize="40dp"
-        android:textAlignment="center"
+        android:layout_marginLeft="150dp"
         android:id="@+id/set"></Button>
 </RelativeLayout>
