--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
     <color name="translucent_orange">#00574b</color>
     <color name="colorPrimary">#FC0738</color>
     <color name="black">#00AA74</color>
-    <color name="red">#FC0738</color>
+    <color name="red">#FFEB3B</color>
 
 </resources>
